cluster/apps/home/unifi/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: home
subsets:
  - addresses:
      - ip: 10.0.0.200
    ports:
      - name: https
        port: 443
        protocol: TCP
