cluster/apps/home/unifi/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: home
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: home
subsets:
- addresses:
  - ip: 10.0.0.200
  ports:
  - name: https
    port: 443
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: home
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_ssl_server_name on;
       proxy_ssl_name unifi.${SECRET_DOMAIN};
spec:
  tls:
  - secretName: unifi-tls
    hosts:
    - unifi.${SECRET_DOMAIN}
  rules:
  - host: unifi.${SECRET_DOMAIN}
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: unifi
            port:
              number: 443
